--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -232,7 +232,7 @@ p{
 }
 
 @media only screen and (max-width: 420px){
-    .arnaque{
+    .howToRespons{
         transform: rotate(90deg);
         -moz-transform: rotate(90deg);
         -webkit-transform: rotate(90deg);
@@ -243,7 +243,7 @@ p{
         -webkit-transform: none;
         -webkit-animation: none;
     }
-    .deuxieme_arnaque{
+    .howToResponsTwo{
         margin-top: 200%;
     }
 }
